--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Project</title>
+    <link rel="stylesheet" href="style1.css">
 
 </head>
 
@@ -25,8 +26,9 @@
     </header>
 
     <section>
-        <div>
+        <div >
             <h2><b>Favorite Foods</b> </h2>
+            
             <ul>
                 <li>
                     Burgers
@@ -72,7 +74,7 @@
             </div>
                 <footer>
             <summary> <h6>  
-                <p style="text-align: end;">This page was created by me and without any help from anyone</p> 
+                <p >This page was created by me and without any help from anyone</p> 
             </h6>
              </summary>
         </footer>
